// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMessagesByConvo selector should burstify messages 1`] = `
Array [
  Object {
    "_id": 0,
    "burstStart": true,
    "convo": "chat",
    "createdAt": "2017-02-01T09:00:00-08:00",
    "text": "Run the tests",
  },
  Object {
    "_id": 1,
    "burstStart": false,
    "convo": "chat",
    "createdAt": "2017-02-01T09:01:00-08:00",
    "text": "Use Redux",
  },
  Object {
    "_id": 2,
    "burstStart": false,
    "convo": "react",
    "createdAt": "2017-02-01T09:10:00-08:00",
    "text": "Fix the tests",
  },
  Object {
    "_id": 2,
    "burstStart": true,
    "convo": "chat",
    "createdAt": "2017-02-01T09:20:00-08:00",
    "text": "Fix the tests",
  },
]
`;

exports[`getMessagesByConvo selector should select desired messages from state 1`] = `
Array [
  Object {
    "_id": 0,
    "burstStart": true,
    "convo": "chat",
    "createdAt": "2017-02-01T09:00:00-08:00",
    "text": "Run the tests",
  },
  Object {
    "_id": 1,
    "burstStart": false,
    "convo": "chat",
    "createdAt": "2017-02-01T09:01:00-08:00",
    "text": "Use Redux",
  },
  Object {
    "_id": 2,
    "burstStart": true,
    "convo": "chat",
    "createdAt": "2017-02-01T09:20:00-08:00",
    "text": "Fix the tests",
  },
]
`;

exports[`getMessagesByConvo selector should select desired messages from state 2`] = `
Array [
  Object {
    "_id": 2,
    "burstStart": true,
    "convo": "react",
    "createdAt": "2017-02-01T09:10:00-08:00",
    "text": "Fix the tests",
  },
]
`;
